--- a/src/main/resources/templates/sys/highway.html
+++ b/src/main/resources/templates/sys/highway.html
@@ -40,7 +40,7 @@
 <div class="pull-right hidden-xs">
                             <ol class="breadcrumb">
                                 <li>
-                                    <a href="index-dashboard.html"><i class="fa fa-home"></i>矿池</a>
+                                    <a th:href="@{/sys/gomasterindex}"><i class="fa fa-home"></i>矿池</a>
                                 </li>
                                 <li class="active">
                                     <strong>推广有礼</strong>
