--- a/src/main/resources/templates/sys/settings.html
+++ b/src/main/resources/templates/sys/settings.html
@@ -40,7 +40,7 @@
 <div class="pull-right hidden-xs">
                             <ol class="breadcrumb">
                                 <li>
-                                    <a href="index-dashboard.html"><i class="fa fa-home"></i>矿池</a>
+                                    <a th:href="@{/sys/gomasterindex}"><i class="fa fa-home"></i>矿池</a>
                                 </li>
                                 <li class="active">
                                     <strong>个人中心</strong>
@@ -72,7 +72,7 @@
                                                             <label class="form-label">姓名</label>
                                                                                                                        <div class="controls">
                                                                 <i class=""></i>
-                                                                <input type="text" class="form-control" name="formfield1"  value="张文博">
+                                                                <input type="text" class="form-control" name="formfield1"  value="">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -82,7 +82,7 @@
 
                                                             <div class="controls">
                                                                 <i class=""></i>
-                                                                <input type="text" class="form-control" name="formfield2" value="79604722@qq.com">
+                                                                <input type="text" class="form-control" id="userMailInner" name="formfield2" value="">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -91,7 +91,7 @@
                                                             <label class="form-label">手机号码 </label>
                                                                                                                         <div class="controls">
                                                                 <i class=""></i>
-                                                                <input type="text" class="form-control" name="formfield3" value="13351212072">
+                                                                <input type="text" class="form-control" name="formfield3" value="">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -101,7 +101,7 @@
                                                           
                                                             <div class="controls">
                                                                 <i class=""></i>
-                                                                <input type="text" class="form-control" name="formfield4" value="230103198388888888">
+                                                                <input type="text" class="form-control" name="formfield4" value="">
                                                             </div>
                                                         </div>
                                                     </div>
