修改小bug以及处理一些问题

--- a/src/main/resources/templates/sys/index-filecoin.html
+++ b/src/main/resources/templates/sys/index-filecoin.html
@@ -52,8 +52,8 @@
             <ul class="nav">
               <li class="active"> <a href="#home2">首页</a></li>
               <li> <a href="#team">官方QQ群</a></li>
-              <li> <a href="portal.php">矿工社区首页</a></li>
-              <li> <a href="forum.php">矿工论坛</a></li>
+              <li> <a href="#">矿工社区首页</a></li>
+              <li> <a href="#">矿工论坛</a></li>
               <li> <a href="#team">官方微信群</a></li>
               <li> <a href="#team">fil/ipfs 收益计算器</a></li>
             </ul>
