--- a/src/main/resources/templates/sys/miner.html
+++ b/src/main/resources/templates/sys/miner.html
@@ -41,7 +41,7 @@
                         <div class="pull-right hidden-xs">
                             <ol class="breadcrumb">
                                 <li>
-                                    <a href="index-dashboard.html"><i class="fa fa-home"></i>矿池</a>
+                                    <a th:href="@{/sys/gomasterindex}"><i class="fa fa-home"></i>矿池</a>
                                 </li>
                                 <li class="active">
                                     <strong>矿工管理</strong>
