--- a/src/main/resources/templates/sys/regist-filecoin.html
+++ b/src/main/resources/templates/sys/regist-filecoin.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" th:href="@{/filecoin/register/css/layout.css}"/>
 </head>
 <body>
+<form name="mainForm" id="mainForm">
 	<div id="wrapper">
 		<header id="header">
 						<div id="headBox">
@@ -43,35 +44,35 @@
 							<h4>邮箱激活</h4>
 						</div>
 					</li>
-					<!--<li>-->
-						<!--<div class="step_inner fr">-->
-							<!--<span class="icon_step">3</span>-->
-							<!--<h4>绑定手机</h4>-->
-						<!--</div>-->
-					<!--</li>-->
-                    <!--<li>-->
-						<!--<div class="step_inner fr">-->
-							<!--<span class="icon_step">4</span>-->
-							<!--<h4>完善矿工资料</h4>-->
-						<!--</div>-->
-					<!--</li>-->
-                       <!--<li>-->
-						<!--<div class="step_inner fr">-->
-							<!--<span class="icon_step">4</span>-->
-							<!--<h4>邀请注册</h4>-->
-						<!--</div>-->
-					<!--</li>-->
+					<li>
+						<div class="step_inner fr">
+							<span class="icon_step">3</span>
+							<h4>绑定手机</h4>
+						</div>
+					</li>
+                    <li>
+						<div class="step_inner fr">
+							<span class="icon_step">4</span>
+							<h4>完善矿工资料</h4>
+						</div>
+					</li>
+                       <li>
+						<div class="step_inner fr">
+							<span class="icon_step">4</span>
+							<h4>邀请注册</h4>
+						</div>
+					</li>
                     
 				</ol>
 				<div class="step_line"></div>
 			</div>
 			<div class="content">
 				<div id="step1" class="step hide">
-					<form action="" method="post" id="step1_frm">
+					<!--<form action="" method="post" id="step1_frm">-->
 						<div class="frm_control_group">
 							<label class="frm_label">邮箱</label>
 							<div class="frm_controls">
-								<input type="text" name="" class="frm_input email" maxlength="32" value=""/>
+								<input type="text" name="email" class="frm_input email" maxlength="32" value=""/>
 								<p class="frm_tips">作为登录帐号，请填写未注册的邮箱</p>
 						  </div>
 						</div>
@@ -87,28 +88,28 @@
 						<div class="frm_control_group">
 							<label class="frm_label">密码</label>
 							<div class="frm_controls">
-								<input type="password" name="" class="frm_input passwd" value=""/>
+								<input type="password" name="passwd" class="frm_input passwd" value=""/>
 								<p class="frm_tips">字母、数字或者英文符号，最短6位，区分大小写</p>
 							</div>
 						</div>
 						<div class="frm_control_group">
 							<label class="frm_label">再次输入密码</label>
 							<div class="frm_controls">
-								<input type="password" name="" class="frm_input passwd2" value=""/>
+								<input type="password" name="passwd2" class="frm_input passwd2" value=""/>
 							</div>
 						</div>
 						<div class="frm_control_group">
 							<label class="frm_label">验证码</label>
 							<div class="frm_controls verifycode">
-								<input type="text" name="" class="frm_input verifyCode" maxlength="5"/>
+								<input type="text" name="captcha" class="frm_input verifyCode" maxlength="5"/>
 								<img id="captchaImgId" th:src="@{/captcha.jpg}" alt="" />
-								<a class="changeVerifyCode" href="javascript:void(0);" onclick = "getCaptcha();">换一张</a>
+								<a class="changeVerifyCode" href="#">换一张</a>
 							</div>
 						</div>
 						<div class="toolBar">
 							<a id="nextBtn" class="btn btn_primary" href="javascript:;">下一步</a>
 						</div>
-					</form>
+					<!--</form>-->
 				</div><!-- // step1 end -->
 				<div id="step2" class="step hide">
 					<div class="w330">
@@ -125,61 +126,61 @@
                     <div class="clear"></div>
 				</div><!-- // step2 end -->
 				<div id="step3" class="step hide">
-					<form action="" method="post" id="step3_frm">
+					<!--<form name="" action="" method="post" id="step3_frm">-->
 						<div class="frm_control_group">
 							<label class="frm_label">真实姓名：</label>
 							<div class="frm_controls">
-								<input type="text" name="" class="frm_input name" maxlength="32"/>
+								<input type="text" name="trueName" id="trueName" class="frm_input trueName" maxlength="32"/>
 								<p class="frm_tips">请填写真实姓名</p>
 							</div>
 						</div>
                         <div class="frm_control_group">
 							<label class="frm_label">身份证号：</label>
 							<div class="frm_controls">
-								<input type="text" name="" class="frm_input name" maxlength="32"/>
+								<input type="text" name="iccid" id="iccid" class="frm_input iccid" maxlength="32"/>
 								<p class="frm_tips">请填写真实身份证号码，作为日后帐号找回重要依据。</p>
 							</div>
 						</div>
 						<div class="frm_control_group">
 							<label class="frm_label">手机号：</label>
 							<div class="frm_controls">
-								<input type="text" name="" class="frm_input phone"/>
+								<input type="text" name="phone" id="phone" class="frm_input phone"/>
 								<p class="frm_tips">请填写常用手机号</p>
 							</div>
 						</div>
 						<div class="frm_control_group">
 							<label class="frm_label">手机验证码：</label>
 							<div class="frm_controls">
-								<input type="text" name="" class="frm_input phoneYzm"/>
+								<input type="text" name="phoneYzm" id="phoneYzm"  class="frm_input phoneYzm"/>
 								<input type="button" value="获取验证码" class="btn btn_default" />
 							</div>
 						</div>
 						<div class="toolBar">
-							<a id="finishedBtn" class="btn btn_primary" href="javascript:;">下一步</a>
+							<a id="nextBtn2" class="btn btn_primary" href="javascript:;">下一步</a>
 						</div>
-					</form>
+					<!--</form>-->
 				</div><!-- // step3 end -->
                 <div id="step4" class="step hide">
-					<form action="" method="post" id="step4_frm">
+					<!--<form action="" method="post" id="step4_frm">-->
 						<div class="frm_control_group">
 							<label class="frm_label">矿机所在位置</label>
 							<div class="frm_controls">
-								<input type="text" name="" class="frm_input name" maxlength="32"/>
+								<input type="text" name="minerMachineAddr" id="minerMachineAddr" class="frm_input minerMachineAddr" maxlength="32"/>
 								<p class="frm_tips">选择您的所在位置</p>
 							</div>
 						</div>
 						<div class="frm_control_group">
 							<label class="frm_label">矿机存放环境</label>
 							<div class="frm_controls">
-								<input type="text" name="" class="frm_input phone"/>
+								<input type="text" name="minerMachineEnv" id="minerMachineEnv" class="frm_input minerMachineEnv"/>
 								<p class="frm_tips">矿机存放位置：例如IDC机房、矿场、家庭、单位</p>
 							</div>
 						</div>
                         <div class="frm_control_group">
 							<label class="frm_label">在线时长：</label>
 							<div class="frm_controls inputradio">
-								<input type="radio" name="browser" onclick="check(this.value)" value="24H Explorer">24小时
-<input type="radio" name="browser" onclick="check(this.value)" value="notsure">不稳定<br />
+								<input type="radio" name="onLineTime" onclick="check(this.value)" value="24H Explorer">24小时
+<input type="radio" name="onLineTime" onclick="check(this.value)" value="notsure">不稳定<br />
 								<p class="frm_tips">如实填写，在线不稳定会影响您质押的代币或收益</p>
 							</div>
 						</div>
@@ -191,7 +192,7 @@
 
 
 
-<div class="i_box"><a href="javascript:;" class="J_minus">-</a><input type="text" value="0" class="J_input" /><a href="javascript:;" class="J_add">+</a></div>
+<div class="i_box"><a href="javascript:;" class="J_minus">-</a><input type="text" id="storageLen" name="storageLen" value="0" class="J_input storageLen" /><a href="javascript:;" class="J_add">+</a></div>
 
 
 
@@ -203,14 +204,14 @@
 						<div class="frm_control_group">
 							<label class="frm_label">带宽大小</label>
 							<div class="frm_controls">
-								<input type="text" name="" class="frm_input phoneYzm"/>
+								<input type="text" name="bandWidth" id="bandWidth" class="frm_input bandWidth"/>
 								<input type="button" value="在线测速" class="btn btn_default" />
 							</div>
 						</div>
 						<div class="toolBar">
 							<a id="finishedBtn" class="btn btn_primary" href="javascript:;">完成</a>
 						</div>
-					</form>
+					<!--</form>-->
 				</div>
                 <!-- // step4 end -->
 				<div id="step5" class="step hide">
@@ -228,31 +229,33 @@
 				</div><!-- // step5 end -->
 			</div>
 		</div><!-- // container end -->
-		<input type="hidden" name="user_id" id="user_id" value=""/>
-		<input type="hidden" name="user_mail" id="user_mail" value=""/>
-		<input type="hidden" name="regist_type" id="regist_type" value="C"/>
-		<input type="hidden" name="mailUrl" id="mailUrl" value="C"/>
+		<input type="hidden" name="userId" id="user_id" value=""/>
+		<input type="hidden" name="userMail" id="user_mail" value=""/>
+		<input type="hidden" name="registType" id="regist_type" value="C"/>
+		<input type="hidden" name="mailUrl" id="mailUrl" value=""/>
 
 		<footer id="footer" class="w960 oh">
 		
 			</nav>
 		</footer><!-- // footer end -->
 	</div><!-- // wrapper end -->
-	
+</form>
 	<script th:src="@{/libs/jquery.min.js}"></script>
 	<script th:src="@{/plugins/layer/layer.js}"></script>
 	<script th:src="@{/plugins/public.js}"></script>
 
-	<script th:src="@{/js/modules/sys/regist.js}"></script>
-
 	<script type="text/javascript" th:inline="javascript">
 
         var ctx= [[${#httpServletRequest.getContextPath()}]];
+        var step= [[${step}]];
+        var userId= [[${userId}]];
 
 		var globleIndex = 0;
-		function getCaptcha(){
-		    $("#captchaImgId").attr("src",ctx+"/captcha.jpg?t=" + $.now());
-		}
+
+        function getCaptcha(){
+            $("#captchaImgId").attr("src",ctx+"/captcha.jpg?t=" + $.now());
+        }
+
 		//显示提示框，目前三个参数(txt：要显示的文本；time：自动关闭的时间（不设置的话默认1500毫秒）；status：默认0为错误提示，1为正确提示；)
 		function showTips(txt,time,status)
 		{
@@ -265,7 +268,7 @@
 				}
 				$('body').prepend(htmlCon);
 				if(time == '' || time == undefined){
-					time = 1500; 
+					time = 1500;
 				}
 				setTimeout(function(){ $('.tipsBox').remove(); },time);
 			}
@@ -277,40 +280,11 @@
 		}
 		
 		$(function(){
-			//AJAX提交以及验证表单
-			$('#nextBtn').click(function(){
-				var email = $('.email').val();
-				var passwd = $('.passwd').val();
-				var passwd2 = $('.passwd2').val();
-				var verifyCode = $('.verifyCode').val();
-				var EmailReg = /^\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/; //邮件正则
-				if(email == ''){
-					showTips('请填写您的邮箱~');
-				}else if(!EmailReg.test(email)){
-					showTips('您的邮箱格式错咯~');
-				}else if(passwd == ''){
-					showTips('请填写您的密码~');
-				}else if(passwd2 == ''){
-					showTips('请再次输入您的密码~');
-				}else if(passwd != passwd2 || passwd2 != passwd){
-					showTips('两次密码输入不一致呢~');
-				}else if(verifyCode == ''){
-					showTips('请输入验证码~');
-				}else{
-                    RegistFunc.ajaxBaseEmailReg();
-				}
-			});
-			
-			//切换步骤（目前只用来演示）
-			$('.processorBox li').click(function(){
-                var i = $(this).index();
-//                if(i == globleIndex){
-                    $('.processorBox li').removeClass('current').eq(i).addClass('current');
-                    $('.step').fadeOut(300).eq(i).fadeIn(500);
-//				}
-			});
+
 		});
 	</script>
+
+	<script th:src="@{/js/modules/sys/regist.js}"></script>
     
     
     <script>
