--- a/src/main/resources/views/modules/filecoin/security.html
+++ b/src/main/resources/views/modules/filecoin/security.html
@@ -13,36 +13,36 @@
     <meta content="" name="author" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../assets/images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="../../filecoin/assets/images/favicon.png" type="image/x-icon" />
     <!-- For iPhone -->
-    <link rel="apple-touch-icon-precomposed" href="../assets/images/apple-touch-icon-57-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="../../filecoin/assets/images/apple-touch-icon-57-precomposed.png">
     <!-- For iPhone 4 Retina display -->
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/images/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../../filecoin/assets/images/apple-touch-icon-114-precomposed.png">
     <!-- For iPad -->
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/images/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../../filecoin/assets/images/apple-touch-icon-72-precomposed.png">
     <!-- For iPad Retina display -->
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/images/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../filecoin/assets/images/apple-touch-icon-144-precomposed.png">
 
 
     <!-- CORE CSS FRAMEWORK - START -->
-    <link href="../assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css" media="screen" />
-    <link href="../assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="../assets/plugins/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
-    <link href="../assets/fonts/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
-    <link href="../assets/fonts/webfont/cryptocoins.css" rel="stylesheet" type="text/css" />
-    <link href="../assets/fonts/icomoon/ipfsun.css" rel="stylesheet" type="text/css" />
-    <link href="../assets/css/animate.min.css" rel="stylesheet" type="text/css" />
-    <link href="../assets/plugins/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet" type="text/css" />
+    <link href="../../filecoin/assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css" media="screen" />
+    <link href="../../filecoin/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../filecoin/assets/plugins/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../filecoin/assets/fonts/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css" />
+    <link href="../../filecoin/assets/fonts/webfont/cryptocoins.css" rel="stylesheet" type="text/css" />
+    <link href="../../filecoin/assets/fonts/icomoon/ipfsun.css" rel="stylesheet" type="text/css" />
+    <link href="../../filecoin/assets/css/animate.min.css" rel="stylesheet" type="text/css" />
+    <link href="../../filecoin/assets/plugins/perfect-scrollbar/perfect-scrollbar.css" rel="stylesheet" type="text/css" />
     <!-- CORE CSS FRAMEWORK - END -->
 
     <!-- HEADER SCRIPTS INCLUDED ON THIS PAGE - START -->
-    <link href="../assets/plugins/icheck/skins/all.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="../../filecoin/assets/plugins/icheck/skins/all.css" rel="stylesheet" type="text/css" media="screen">
     <!-- HEADER SCRIPTS INCLUDED ON THIS PAGE - END -->
 
 
     <!-- CORE CSS TEMPLATE - START -->
-    <link href="../assets/css/style.css" rel="stylesheet" type="text/css" />
-    <link href="../assets/css/responsive.css" rel="stylesheet" type="text/css" />
+    <link href="../../filecoin/assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="../../filecoin/assets/css/responsive.css" rel="stylesheet" type="text/css" />
     <!-- CORE CSS TEMPLATE - END -->
 
 </head>
@@ -152,7 +152,7 @@
                 <ul class="info-menu right-links list-inline list-unstyled">
                     <li class="profile">
                         <a href="#" data-toggle="dropdown" class="toggle">
-                           <span>richie963 <i class="fa fa-angle-down"></i></span>
+                           <span id="userNameo"> <i class="fa fa-angle-down"></i></span>
                         </a>
                         <ul class="dropdown-menu profile animated fadeIn">
                             <li>
@@ -213,11 +213,11 @@
                     </li>
                     <li class="">
                         <a href="my-wallet.html">
-                            <i class="img"><img src="../data/icons/wallet-o.png" style="width:16px" alt=""></i>
+                            <i class="img"><img src="../../filecoin/data/icons/wallet-o.png" style="width:16px" alt=""></i>
                             <span class="title">付款设置</span>
                         </a>
                     </li>
-                    <li class="">
+                    <li class="open">
                         <a href="security.html">
                             <i class="fa fa-lock"></i>
                             <span class="title">安全设置</span>
@@ -232,14 +232,14 @@
                         
                     </li>
                     
-                   <li class="">
+                    <li class="">
                         <a href="faq.html">
                             <i class="fa fa-question-circle"></i>
                             <span class="title">帮助中心</span>
                         </a>
                     </li>
                         
-                        <li class="open">
+                        <li class="">
                         <a href="highway.html">
                             <i class="fa fa-comments"></i>
                             <span class="title">推广有礼</span>
@@ -265,28 +265,88 @@
 
                         <div class="pull-left">
                             <!-- PAGE HEADING TAG - START -->
-                            <h1 class="title">推广有礼</h1>
+                            <h1 class="title">安全设置</h1>
                             <!-- PAGE HEADING TAG - END -->
                         </div>
+<div class="pull-right hidden-xs">
+                            <ol class="breadcrumb">
+                                <li>
+                                    <a href="index-dashboard.html"><i class="fa fa-home"></i>矿池</a>
+                                </li>
+                                <li class="active">
+                                    <strong>安全设置</strong>
+                                </li>
+                            </ol>
+                        </div>
 
-11
                     </div>
                 </div>
 
                 
-             
-                
-                
-                
-                
 
-
-
-                
                 <div class="clearfix"></div>
 
+                <div class="col-lg-12">
+                    <section class="box has-border-left-3">
+                            <header class="panel_header">
+                                <h2 class="title pull-left">系统安全设置</h2>
+                            </header>
+                            <div class="content-body">    
+                                <div class="row">
+                                    <div class="tabs-wrapper">
+                                        
+                                        <div class="tab-content">
+                                            <div class="tab-pane fade in active" id="home-1">
+<div class="security-option-wrapper">
+                                                            <img src="../../filecoin/data/icons/email-verification.png" class="tab-img-icon" alt="icon">
+                                                            <div class="tab-head">
+                                                                <h4 class="bold mb-5">邮箱认证</h4>
+                                                                <h4 class="no-mt"><small id="userMailInnerSmall">您认证的邮箱地址：79604722@qq.com 已通过认证！</small></h4>
 
-                
+                                                                <h5 class="bold no-mb"><i class="fa fa-check-circle-o complete f-s-14"></i> 已认证</h5>
+                                                            </div>
+                                              </div>
+                                                        
+                                                        
+                                                       <div class="security-option-wrapper">
+                                                            <img src="../../filecoin/data/icons/phone-verification.png" class="tab-img-icon" alt="icon">
+                                                            <div class="tab-head">
+                                                              <h4 class="bold mb-5">手机身份认证</h4>
+                                                                <h4 class="no-mt"><small>未通过认证！</small></h4>
+
+                                                                <!--<h5 class="bold no-mb"><i class="fa fa-check-circle-o complete f-s-14"></i> 已认证</h5>-->
+                                                                <a href="#" class="btn btn-primary btn-corner right15"><i class="fa fa-cloud-download complete color-white"></i>尚未开放</a>
+
+                                                            </div>
+                                              </div> 
+                                                       
+                                                        
+<div class="security-option-wrapper">
+                                                            <img src="../../filecoin/data/icons/backup.png" class="tab-img-icon" alt="icon">
+                                                            <div class="tab-head">
+                                                                <h4 class="bold mb-5">谷歌身份验证器</h4>
+                                                                <h4 class="no-mt"><small>请使用您手机上的谷歌身份验证器 APP 进行设置</small></h4>
+
+                                                                <a href="#" class="btn btn-primary btn-corner right15"><i class="fa fa-cloud-download complete color-white"></i>尚未开放</a>
+                                                            </div>
+                                              </div>                               
+                                                        
+                                                        
+                                                
+
+                                            </div>
+                                            
+                                            
+
+                                           
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                    </section>
+                </div>
+
+                <div class="clearfix"></div>
 
 
                 <!-- MAIN CONTENT AREA ENDS -->
@@ -303,29 +363,53 @@
 
 
     <!-- CORE JS FRAMEWORK - START -->
-    <script src="../assets/js/jquery-1.11.2.min.js"></script>
-    <script src="../assets/js/jquery.easing.min.js"></script>
-    <script src="../assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-    <script src="../assets/plugins/pace/pace.min.js"></script>
-    <script src="../assets/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-    <script src="../assets/plugins/viewport/viewportchecker.js"></script>
+    <script src="../../filecoin/assets/js/jquery-1.11.2.min.js"></script>
+    <script src="../../filecoin/assets/js/jquery.easing.min.js"></script>
+    <script src="../../filecoin/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../../filecoin/assets/plugins/pace/pace.min.js"></script>
+    <script src="../../filecoin/assets/plugins/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script src="../../filecoin/assets/plugins/viewport/viewportchecker.js"></script>
     <script>
-        window.jQuery||document.write('<script src="../assets/js/jquery-1.11.2.min.js"><\/script>');
+        window.jQuery||document.write('<script src="../../filecoin/assets/js/jquery-1.11.2.min.js"><\/script>');
     </script>
     <!-- CORE JS FRAMEWORK - END -->
 
 
     <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - START -->
-    <script src="../assets/plugins/chartjs-chart/Chart.min.js"></script>
-    <script src="../assets/js/chart-chartjs.js"></script>
+    <script src="../../filecoin/assets/plugins/chartjs-chart/Chart.min.js"></script>
+    <script src="../../filecoin/assets/js/chart-chartjs.js"></script>
 
-    <script src="../assets/plugins/icheck/icheck.min.js"></script>
+    <script src="../../filecoin/assets/plugins/icheck/icheck.min.js"></script>
     <!-- OTHER SCRIPTS INCLUDED ON THIS PAGE - END -->
 
 
     <!-- CORE TEMPLATE JS - START -->
-    <script src="../assets/js/scripts.js"></script>
+    <script src="../../filecoin/assets/js/scripts.js"></script>
     <!-- END CORE TEMPLATE JS - END -->
+
+    <script src="../../plugins/layer/layer.js"></script>
+    <script src="../../plugins/jsMap.js"></script>
+    <script src="../../plugins/common.js"></script>
+    <script src="../../plugins/public.js"></script>
+    <script src="../../js/modules/sys/login.js"></script>
+    <!-- jQuery Validation plugin javascript-->
+    <script src="../../plugins/jquery-validation/js/jquery.validate.js"></script>
+    <!-- 自定义validation方法 -->
+    <script src="../../plugins/jquery-validation/js/additional-methods.js"></script>
+    <!-- jquery validation 默认中文返回信息js  -->
+    <script src="../../plugins/jquery-validation/js/localization/messages_zh.min.js"></script>
+    <script src="../../plugins/jquery-validation/form-validate-demo.js"></script>
+
+    <!-- 登录js -->
+    <script src="../../js/modules/sys/login.js"></script>
+    <!-- END CORE TEMPLATE JS - END -->
+    <script >
+        var ctx = "";
+        $(function(){
+            LoginFunc.getLoginUser();
+        });
+
+    </script>
 
 </body>
 
